[package]
name = "rusty-chat-app"
description = "A simple chat application using Rust"
license = "MIT"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/arjav0703/chat-app"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
chrono = "0.4.42"
cursive = "0.21.1"
